Feat: support specified existing namespace while creating a project
